--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "Mundana Free Jekyll Theme"
+title: "最新消息"
 layout: default
 pagination:
     enabled: true
-description: "A great Jekyll theme developed by Sal @wowthemesnet."
+description: "全部生命系列官方網頁"
 ---
 
 
